objects/copado__Default_Persona_Permission__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Default_Persona__c</fullName>
        <label>Default Persona</label>
        <referenceTo>copado__Default_Persona__mdt</referenceTo>
        <relationshipLabel>Default Persona Permissions</relationshipLabel>
        <relationshipName>Default_Persona_Permissions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomPermission</fullName>
                    <default>true</default>
                    <label>Custom Permission</label>
                </value>
                <value>
                    <fullName>CopadoLicense</fullName>
                    <label>Copado License</label>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                    <label>Permission Set</label>
                </value>
                <value>
                    <fullName>PermissionSetGroup</fullName>
                    <label>Permission Set Group</label>
                </value>
                <value>
                    <fullName>CredentialAccessLevel</fullName>
                    <label>Credential Access Level</label>
                </value>
                <value>
                    <fullName>PackageLicense</fullName>
                    <label>Package License</label>
                </value>
                <value>
                    <fullName>AppPermission</fullName>
                    <label>App Permission</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Persona Permission</label>
    <listViews>
        <fullName>copado__All_Default_Persona_Permissions</fullName>
        <columns>copado__Default_Persona__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Value__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Default Persona Permissions</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Default Persona Permissions</pluralLabel>
</CustomObject>